36 Pots should have a valid through date and archived property  (#70)
- Added migration that adds creation date, archive date and is_archived flag
- Added migration for pot templates (future todo)
- added APIs to archive and unarchive pots
- added UI functionality to archive and unarchive pots
- added "Archived" tab to overview so that archived pots don't clutter the overview
- updated npm packages
- updated cargo packages
